js/src/tests/test262/built-ins/Error/prototype/toString/tostring-message-throws-toprimitive.js




















assert.throws(TypeError, function() {
    Error.prototype.toString.call({message: {valueOf: undefined, toString: undefined}});
}, "ToPrimitive(msg) called by ToString(msg) throws TypeError")

reportCompare(0, 0);
